Added secundary color var to root

--- a/summary.html
+++ b/summary.html
@@ -13,11 +13,11 @@
 <body onload="init()">
     <header id="header">
     </header>
-
     <div id="smallMenu" class="smallMenu noDisplay">
     </div>    
     <nav id="navbar">
     </nav>
+
     <main class="summaryPage">
         <div class="summaryPageHeading">
             <h1>Join 360</h1>
@@ -43,7 +43,15 @@
                     </div>
                 </div>
                 <div class="summaryUrgentToDos summaryBoxes">
-
+                    <div class="summaryUrgentToDosLeft">
+                        <div><img src="./img/summary/urgent.svg" alt=""></div>
+                        <div class="summaryToDosNumber">1</div>
+                    </div>
+                    <div class="urgentToDosSeparation"></div>
+                    <div class="summaryUrgentToDosRight">
+                        <div>October 16, 2022</div>
+                        <div>Upcoming Deadline</div>
+                    </div>
                 </div>
                 <div class="summaryCurrentTasksOverview">
                     <div class="summaryBoxes summaryTasksBox">
