Finished summary.html; Created contacts.html

--- a/summary.html
+++ b/summary.html
@@ -49,8 +49,8 @@
                     </div>
                     <div class="urgentToDosSeparation"></div>
                     <div class="summaryUrgentToDosRight">
-                        <div>October 16, 2022</div>
-                        <div>Upcoming Deadline</div>
+                        <div class="urgentToDoDate">October 16, 2022</div>
+                        <div class="urgentToDoInfo">Upcoming Deadline</div>
                     </div>
                 </div>
                 <div class="summaryCurrentTasksOverview">
@@ -69,8 +69,8 @@
                 </div>
             </div>
             <div class="summaryPageGreeting">
-                <div>Good morning,</div>
-                <div>Sofia Müller</div>
+                <div class="greetingMessage">Good morning,</div>
+                <div class="greetingName">Sofia Müller</div>
             </div>
         </div>
     </main>
