--- a/contacts.html
+++ b/contacts.html
@@ -22,9 +22,9 @@
         
     </main>
 
+    <script src="./javascript/contacts.js"></script>
     <script src="./javascript/header.js"></script>
     <script src="./javascript/navbar.js"></script>
-    <script src="./javascript/summary.js"></script>
 </body>
 
 </html>
