updated summary page

--- a/summary.html
+++ b/summary.html
@@ -18,7 +18,7 @@
     <nav id="navbar">
     </nav>
 
-    <main class="summaryPage">
+    <main>
         <div class="summaryPageHeading">
             <h1>Join 360</h1>
             <div class="headingBorder"></div>
