corrected var name

--- a/contacts.html
+++ b/contacts.html
@@ -14,12 +14,24 @@
     <header id="header">
     </header>
     <div id="smallMenu" class="smallMenu noDisplay">
-    </div>    
+    </div>
     <nav id="navbar">
     </nav>
 
     <main>
-        
+        <div class="contactsFrame">
+            <button class="newContactButton">Add new contact <img src="./img/contacts/personadd.svg" alt=""></button>
+            <div class="contactsList">
+                <div class="contactLetter">A</div>
+                <div class="contactsSeparationLine"></div>
+                <div class="contactsGroup">
+                    <div class="contactField"></div>
+                    <div class="contactField"></div>
+                </div>
+
+            </div>
+        </div>
+        <div></div>
     </main>
 
     <script src="./javascript/contacts.js"></script>
