added contacts list to contacts.html

--- a/contacts.html
+++ b/contacts.html
@@ -25,10 +25,83 @@
                 <div class="contactLetter">A</div>
                 <div class="contactsSeparationLine"></div>
                 <div class="contactsGroup">
-                    <div class="contactField"></div>
-                    <div class="contactField"></div>
+                    <div class="contactField">
+                        <div class="contactProfileBadge">AM</div>
+                        <div class="contactDetails">
+                            <div class="contactName">Anton Mayer</div>
+                            <div class="contactEmail">antonm@gmail.com</div>
+                        </div>
+                    </div>
+                    <div class="contactField">
+                        <div class="contactProfileBadge">AS</div>
+                        <div class="contactDetails">
+                            <div class="contactName">Anja Schulz</div>
+                            <div class="contactEmail">schulz@hotmail.com</div>
+                        </div>
+                    </div>
                 </div>
-
+                <div class="contactLetter">B</div>
+                <div class="contactsSeparationLine"></div>
+                <div class="contactsGroup">
+                    <div class="contactField">
+                        <div class="contactProfileBadge">BZ</div>
+                        <div class="contactDetails">
+                            <div class="contactName">Benedikt Ziegler</div>
+                            <div class="contactEmail">benedikt@gmail.com</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="contactLetter">D</div>
+                <div class="contactsSeparationLine"></div>
+                <div class="contactsGroup">
+                    <div class="contactField">
+                        <div class="contactProfileBadge">DE</div>
+                        <div class="contactDetails">
+                            <div class="contactName">David Eisenberg</div>
+                            <div class="contactEmail">davidberg@gmail.com</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="contactLetter">E</div>
+                <div class="contactsSeparationLine"></div>
+                <div class="contactsGroup">
+                    <div class="contactField">
+                        <div class="contactProfileBadge">EF</div>
+                        <div class="contactDetails">
+                            <div class="contactName">Eva Fischer</div>
+                            <div class="contactEmail">eva@gmail.com</div>
+                        </div>
+                    </div>
+                    <div class="contactField">
+                        <div class="contactProfileBadge">EM</div>
+                        <div class="contactDetails">
+                            <div class="contactName">Emanuel Mauer</div>
+                            <div class="contactEmail">emmanuelma@gmail.com</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="contactLetter">M</div>
+                <div class="contactsSeparationLine"></div>
+                <div class="contactsGroup">
+                    <div class="contactField">
+                        <div class="contactProfileBadge">MB</div>
+                        <div class="contactDetails">
+                            <div class="contactName">Marcel Bauer</div>
+                            <div class="contactEmail">bauer@gmail.com</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="contactLetter">T</div>
+                <div class="contactsSeparationLine"></div>
+                <div class="contactsGroup">
+                    <div class="contactField">
+                        <div class="contactProfileBadge">TW</div>
+                        <div class="contactDetails">
+                            <div class="contactName">Tatjana Wolf</div>
+                            <div class="contactEmail">wolf@gmail.com</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div></div>
