added hover effect to summary page

--- a/summary.html
+++ b/summary.html
@@ -28,14 +28,14 @@
             <div class="summaryPageTasksContainer">
                 <div class="summaryToDosGeneral">
                     <div class="summaryToDosContainer summaryBoxes">
-                        <img src="./img/summary/pen.svg" alt="">
+                        <img class="toDoIcon" src="./img/summary/pen.svg" alt="">
                         <div class="summaryToDosContainerText">
                             <div class="summaryToDosNumber">1</div>
                             <div class="summaryTextDescription">To-do</div>
                         </div>
                     </div>
                     <div class="summaryToDosContainer summaryBoxes">
-                        <img src="./img/summary/tick.svg" alt="">
+                        <img class="toDoIcon" src="./img/summary/tick.svg" alt="">
                         <div class="summaryToDosContainerText">
                             <div class="summaryToDosNumber">1</div>
                             <div class="summaryTextDescription">Done</div>
