--- a/contacts.html
+++ b/contacts.html
@@ -104,7 +104,27 @@
                 </div>
             </div>
         </div>
-        <div></div>
+        <div class="contactPage">
+            <div class="contactsHeading">
+                <h1>Contacts</h1>
+                <div class="headingBorder"></div>
+                <h2>Better with a team</h2>
+            </div>
+            <div class="contactCard">
+                <div class="contactCardMainInfos">
+                    <div class="contactProfileBadgeBig">AM</div>
+                    <div class="contactNameBigContainer">
+                        <div class="contactNameBig">Anton Mayer</div>
+                        <div class="contactFunctionsContainer">
+                            <div class="contactFunctions"><img class="contactFunctionsIcons" src="./img/contacts/edit.svg" alt="">Edit</div>
+                            <div class="contactFunctions"><img class="contactFunctionsIcons" src="./img/contacts/delete.svg" alt="">Delete</div>
+                        </div>
+                    </div>
+                </div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
     </main>
 
     <script src="./javascript/contacts.js"></script>
