--- a/legalnotice.html
+++ b/legalnotice.html
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="informationText">
-            <h3>Imprint</h3><br>
+            <br><h3>Imprint</h3><br>
             <p><li>[Student Names List]</li></p>
             <p><li>[Address of the JOIN operator - e.g. one of the students]</li></p>
             <p><li>[Postcode and city]</li></p>
