--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="informationText">
-            <h3>Subtitle</h3>
+            <br><h3>Subtitle</h3>
             <br>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam dolorem ad dicta eligendi? Praesentium, eaque quam? Quas expedita officiis facilis cum, error reiciendis quisquam libero ea veniam, perferendis fugiat in..</p>
             <br><br>
