--- a/contacts.html
+++ b/contacts.html
@@ -18,11 +18,30 @@
     <nav id="navbar">
     </nav>
 
+    <div class="smallNav">
+        <a class="smallNavElement smallNavLinkActive" href="summary.html">
+            <img src="./img/nav/summaryIcon.svg" class="smallNavImg" alt="">
+            <div class="smallNavText">Summary</div>
+        </a>
+        <a class="smallNavElement" href="board.html">
+            <img src="./img/nav/boardIcon.svg" class="smallNavImg" alt="">
+            <div class="smallNavText">Board</div>
+        </a>
+        <a class="smallNavElement" href="addtask.html">
+            <img src="./img/nav/editSquareIcon.svg" class="smallNavImg" alt="">
+            <div class="smallNavText">Add Tasks</div>
+        </a>
+        <a class="smallNavElement" href="contacts.html">
+            <img src="./img/nav/contactIcon.svg" class="smallNavImg" alt="">
+            <div class="smallNavText">Contacts</div>
+        </a>
+    </div>
+
     <main>
-        <div class="contactsFrame">
+        <div class="contactsFrame" id="contactsFrame">
             <button class="newContactButton" onclick="addContact()">Add new contact <img
                     src="./img/contacts/personadd.svg" alt=""></button>
-            <div class="contactsList">
+            <div class="contactsList" >
                 <div class="contactLetter">A</div>
                 <div class="contactsSeparationLine"></div>
                 <div class="contactsGroup">
@@ -105,11 +124,12 @@
                 </div>
             </div>
         </div>
-        <div id="contactPage" class="contactPage">
+        <div id="contactPage" class="contactPage" id="contactPage">
             <div class="contactsHeading">
                 <h1>Contacts</h1>
                 <div class="headingBorder"></div>
                 <h2>Better with a team</h2>
+                <a class="arrowLeftContainer" onclick="closeContactPage()"><img src="./img/contacts/arrowleft.svg" alt=""></a>
             </div>
             <div class="contactCard" id="contactCard">
                 <div class="contactCardMainInfos">
@@ -137,6 +157,8 @@
                 </div>
             </div>
         </div>
+        <div class="contactOptionsIconContainer addPersonIcon" onclick="addContact()" id="addPersonIcon"><img src="./img/contacts/smalladdperson.svg" alt=""></div>
+        <div class="contactOptionsIconContainer editContactIcon noDisplay" id="editContactIcon"><img src="./img/contacts/contactoptions.svg" alt=""></div>
         <div id="contactActionsOverlay" onclick="closeEditContact(); closeAddContact()"
             class="contactActionsOverlay noDisplay"></div>
         <div id="editContactContainer" class="contactActionsContainer noDisplay">
