Changed small menu css on smaller screens

--- a/contacts.html
+++ b/contacts.html
@@ -41,7 +41,7 @@
         <div class="contactsFrame" id="contactsFrame">
             <button class="newContactButton" onclick="addContact()">Add new contact <img
                     src="./img/contacts/personadd.svg" alt=""></button>
-            <div class="contactsList" >
+            <div class="contactsList">
                 <div class="contactLetter">A</div>
                 <div class="contactsSeparationLine"></div>
                 <div class="contactsGroup">
@@ -129,7 +129,8 @@
                 <h1>Contacts</h1>
                 <div class="headingBorder"></div>
                 <h2>Better with a team</h2>
-                <a class="arrowLeftContainer" onclick="closeContactPage()"><img src="./img/contacts/arrowleft.svg" alt=""></a>
+                <a class="arrowLeftContainer" onclick="closeContactPage()"><img src="./img/contacts/arrowleft.svg"
+                        alt=""></a>
             </div>
             <div class="contactCard" id="contactCard">
                 <div class="contactCardMainInfos">
@@ -157,8 +158,10 @@
                 </div>
             </div>
         </div>
-        <div class="contactOptionsIconContainer addPersonIcon" onclick="addContact()" id="addPersonIcon"><img src="./img/contacts/smalladdperson.svg" alt=""></div>
-        <div class="contactOptionsIconContainer editContactIcon noDisplay" id="editContactIcon"><img src="./img/contacts/contactoptions.svg" alt=""></div>
+        <div class="contactOptionsIconContainer addPersonIcon" onclick="addContact()" id="addPersonIcon"><img
+                src="./img/contacts/smalladdperson.svg" alt=""></div>
+        <div class="contactOptionsIconContainer editContactIcon noDisplay" id="editContactIcon"><img
+                src="./img/contacts/contactoptions.svg" alt=""></div>
         <div id="contactActionsOverlay" onclick="closeEditContact(); closeAddContact()"
             class="contactActionsOverlay noDisplay"></div>
         <div id="editContactContainer" class="contactActionsContainer noDisplay">
@@ -180,7 +183,6 @@
                         <button class="formButton saveButton">Save <img src="./img/contacts/check.svg" alt=""></button>
                     </div>
                 </form>
-
             </div>
         </div>
         <div id="addContactContainer" class="contactActionsContainer noDisplay">
@@ -202,15 +204,19 @@
                     <div class="inputContainer"><input class="contactActionInput" type="tel" placeholder="Phone"><img
                             class="inputSmallIcon" src="./img/contacts/call.svg" alt=""></div>
                     <div class="formButtonsContainer">
-                        <button class="formButton deleteButton" onclick="closeAddContact()">Cancel <img src="./img/contacts/cancel.svg"></button>
+                        <button class="formButton deleteButton" onclick="closeAddContact()">Cancel <img
+                                src="./img/contacts/cancel.svg"></button>
                         <button class="formButton saveButton">Create contact <img src="./img/contacts/check.svg"
                                 alt=""></button>
                     </div>
                 </form>
 
             </div>
-
         </div>
+        <!---->
+
+
+
     </main>
 
     <script src="./javascript/contacts.js"></script>
