Responsive header and small navbar

--- a/summary.html
+++ b/summary.html
@@ -18,23 +18,7 @@
     <nav id="navbar">
     </nav>
 
-    <div class="smallNav">
-        <a class="smallNavElement smallNavLinkActive" href="summary.html">
-            <img src="./img/nav/summaryIcon.svg" class="smallNavImg" alt="">
-            <div class="smallNavText">Summary</div>
-        </a>
-        <a class="smallNavElement" href="board.html">
-            <img src="./img/nav/boardIcon.svg" class="smallNavImg" alt="">
-            <div class="smallNavText">Board</div>
-        </a>
-        <a class="smallNavElement" href="addtask.html">
-            <img src="./img/nav/editSquareIcon.svg" class="smallNavImg" alt="">
-            <div class="smallNavText">Add Tasks</div>
-        </a>
-        <a class="smallNavElement" href="contacts.html">
-            <img src="./img/nav/contactIcon.svg" class="smallNavImg" alt="">
-            <div class="smallNavText">Contacts</div>
-        </a>
+    <div id="smallNav" class="smallNav">
     </div>
 
     <main>
