--- a/addtask.html
+++ b/addtask.html
@@ -33,7 +33,7 @@
                         <span class="typo">Description</span>
                         <input class="inputDescription inputField" type="text" placeholder="Enter a Description">
                     </div>
-                    <div class="assigned inputBox">
+                    <div class="assigned inputBox dropdown">
                         <span class="typo">Assigned to</span>
                         <select class="inputAssigned inputField" id="contacts">
                             <option value="x">Select contacts to assign</option> 
@@ -89,7 +89,7 @@
                     <span class="typoSmall typoRed">*</span><span class="typoSmall">This field is required</span>
                 </div>
                 <div class="buttonsRight">
-                    <button class="buttonClear">Clear <img class="icon" src="./img/addtask/iconoir_cancel.svg"
+                    <button class="buttonClear">Clear <img class="iconCross" src="./img/addtask/iconoir_cancel.svg"
                             alt=""></button>
                     <button class="buttonCreate">Create Task <img class="icon" src="./img/addtask/check.svg"
                             alt=""></button>
