--- a/signup.html
+++ b/signup.html
@@ -45,7 +45,10 @@
         <span class="legalNotice">Legal notice</span>
     </div>
 
-    
+    <div>
+        <button class="successButtonHide">You Signed Up successfully</button>
+    </div>
+
 
     <script src="./javascript/summary.js"></script>
     <script src="./javascript/header.js"></script>
